@@ -24,6 +24,7 @@
 - Add cache_column_counts method to get counts with one query for associations which are not preloaded, query per column is overridable with count_query_for_column
 - ActiveStorage support with bridge
 - Add list_row_attributes helper so more HTML attributes can be added to tr.record in list, overriding the helper
+- Support column!=value param for not equal condition (column!= means column is not null)
 
 = 3.6.0.pre
 - Added threadsafety as tech preview, enabled with ActiveScaffold.threadsafe! in initializer.
